--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,10 @@ footer {
     align-items: center;
 }
 
+.controls{
+    padding-top: 15px;
+}
+
 .play-icon {
     border: 1px solid 50px;
 }
@@ -335,7 +339,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 30px auto;
+    margin: 40px auto;
     gap: 10px;
     width: 100%;
 }
@@ -355,7 +359,6 @@ footer {
     height: 4px;
     background: #555;
     border-radius: 2px;
-    overflow: hidden;
 }
 
 .gray-slider {
@@ -363,7 +366,7 @@ footer {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 20%;
+    width: 40%;
     background-color: #7d7f84;
     border-radius: 2px;
 }
@@ -373,7 +376,7 @@ footer {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 20%;
+    width: 40%;
     height: 100%;
     background-color: greenyellow;
     border-radius: 2px;
@@ -390,7 +393,7 @@ footer {
     top: 50%;
     transform: translateY(-50%);
     color: #fff;
-    font-size: 0.5rem;
+    font-size: 1rem;
 }
 
 .volume-container{
